<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_gradient"
    android:padding="@dimen/space_md">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/headerTitle"
            style="@style/TextAppearance.FleaMarket.Display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications_title"
            android:textColor="@color/on_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headerSubtitle"
            style="@style/TextAppearance.FleaMarket.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:text="@string/notifications_subtitle"
            android:textColor="@color/on_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerTitle"
            app:layout_constraintEnd_toStartOf="@id/markAllReadButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/markAllReadButton"
            style="@style/Widget.FleaMarket.Button.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications_mark_all"
            android:enabled="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filterChipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        app:singleSelection="true"
        app:layout_constraintTop_toBottomOf="@id/headerContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAll"
            style="@style/Widget.FleaMarket.Chip"
            android:layout_marginEnd="@dimen/space_sm"
            android:text="@string/notifications_filter_all"
            android:checked="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipUnread"
            style="@style/Widget.FleaMarket.Chip"
            android:text="@string/notifications_filter_unread" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notificationsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_md"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/space_xl"
        app:layout_constraintTop_toBottomOf="@id/filterChipGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/emptyStateCard"
        style="@style/Widget.FleaMarket.Card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_lg"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/filterChipGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_notif_message"
                android:tint="@color/primary" />

            <TextView
                android:id="@+id/emptyTitle"
                style="@style/TextAppearance.FleaMarket.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:text="@string/notifications_empty_title" />

            <TextView
                android:id="@+id/emptyText"
                style="@style/TextAppearance.FleaMarket.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:gravity="center"
                android:text="@string/notifications_empty_subtitle" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

